reviews padding and aligning fixed

--- a/src/app/components/photos-profile/photos-profile.component.scss
+++ b/src/app/components/photos-profile/photos-profile.component.scss
@@ -8,17 +8,17 @@
     flex-direction:column;
 }
 .Header h1{
-    font-size: 25px;
+    font-size: 20px;
     color: var(--main);
     font-weight: 900;
-
+    text-transform: uppercase;
 }
 .Header p{
     font-size: 15px;
     color: var(--textParagraphcolor);
 }
 .ContainerPhotos{
-margin-top: 2%;
+margin-top: 3%;
 width: 90%;
 margin-left:5%;
 border-top-left-radius: 9px;
@@ -60,21 +60,13 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
     padding-left: 2%;
     color:lightgrey;
 }
-.words h2{
-    margin-left: 2%;
-    text-align: center;
-    width: 7%;
-    background-color:lightgrey;
-    border-radius: 50%;
-    color: var(--textSecondarycolor);
-}
 @media screen and (min-width: 1024px){
     .ContainerHeader{
-        margin-top:3%;
+        margin-top:5%;
 
     }
     .Header h1{
-        font-size: 40px;
+        font-size: 35px;
     }
     .Header p{
         font-size: 20px;
@@ -82,14 +74,14 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
    .ContainerPhotos{
     display: flex;
     flex-direction: row;
-    margin-top: 1%;
+    margin-top: 2%;
 }
 .image1{ 
 
     width: 100%;
 }
 .image2{ 
-        width: 50%;
+    width: 50%;
   
         
 }
@@ -103,15 +95,21 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
     display: flex;
     width: 100%;
     border-top-right-radius: 9px;
-    width: 99%;
-    margin: 0.30%;
+    width: 100%;
+   
 }
 .Img3{
     display: flex;
-    width: 99%;
-    margin: 0.70%;
-
+    width: 100%;
 }
+.words{
+    padding-top: 0.50%;
+}
+.words h1{
+    padding-left: 0.50%;
+    color:lightgrey;
+}
+
 
 
 
