--- a/src/app/components/testimonials-business/testimonials-business.component.scss
+++ b/src/app/components/testimonials-business/testimonials-business.component.scss
@@ -13,6 +13,7 @@
   font-size: 25px;
   color: var(--main);
   font-weight: 900;
+  text-transform: uppercase;
 }
 .AverageRating {
   display: flex;
@@ -116,50 +117,66 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .Testimonial {
-    justify-content: left;
-    padding-top: 7%;
-  }
+
   .AverageRating {
     padding-top: 0%;
     display: flex;
     flex-direction: row;
     justify-content: left;
   }
+
   .AverageRating h1 {
-    font-size: 20px;
+    font-size: 17px;
     color: var(--textParagraphcolor);
     padding-left: 5%;
+    padding-top: 0%;
   }
+
   .Stars{
-    padding-left: 4%;
+    padding-left: 3%;
   }
+
+  .middle {
+    width: 60%;
+  }
+
+  .right {
+    text-align:left;
+  }
+  
   .Graph {
     width: 100%;
     flex-direction: row;
     display: flex;
-    justify-content: center;
-    padding-top: 1%;
-    margin-left: 0%;
-  }
-  .Testimonial {
+    justify-content:left;
     padding-top: 2%;
+    margin-left: 5%;
   }
+  
+  .Testimonial {
+    padding-top: 4%;
+    justify-content: left;
+  }
+
   .Testimonial h1 {
     padding-left: 5%;
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .Stars {
-    padding-top: 0.5%;
+    padding-top: 0.2%;
     width: 15%;
   }
+
   .Stars h1 {
     font-size: 15px;
+    padding-top: 0.2%;
   }
+  
   .row {
     width: 60%;
   }
+
   .ContainerBar {
     display: flex;
     flex-direction: row;
